# pf2e-wealth-calculator

./: .gitignore  OGL  PF2eItemList.csv  PF2eItemListOld.csv  README.md  loot.txt  pf2e-wealth-calculator.py  pyproject.toml
.github/workflows/: tests.yml
aon_data/: PF2eItemList.csv  PF2eItemList_backup.csv  html_dump.htm  scrape_html_and_reformat.py
pf2e_wealth_calculator/: __init__.py  dataframes.py  entry_point.py  gui.py  pf2e-wealth-calculator.py  pf2ewc.py  structs.py
pf2e_wealth_calculator/files/: treasurebylevel.csv
pf2e_wealth_calculator/tables/: PF2eItemList.csv  materials.csv  rune_names.csv  rune_replacer.csv
tests/: test_pf2ewc.py
ui/: main.ui
